<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background1"
    android:background="@color/slate_gray"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/errMessage"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginRight="50dp"
        android:textAlignment="center"
        android:text="@string/mainTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <Button
        android:id="@+id/BtStartGame"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="376dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@color/bg2"
        android:text="@string/startGame"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtSelectPlayer1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="376dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:background="@color/background"
        android:text="@string/select_One"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtSelectPlayer2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="376dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/background"
        android:text="@string/select_Two"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtSelectPlayer1" />

    <Button
        android:id="@+id/BtViewScore"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="170dp"
        android:layout_height="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@color/background"
        android:text="@string/view_score"
        app:layout_constraintEnd_toStartOf="@+id/BtAddPlay"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtStartGame" />

    <Button
        android:id="@+id/BtAddPlay"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="170dp"
        android:layout_height="92dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@color/background"
        android:text="@string/add_Player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtStartGame" />

</androidx.constraintlayout.widget.ConstraintLayout>